--- a/src/GameLauncher.vcxproj.filters
+++ b/src/GameLauncher.vcxproj.filters
@@ -37,11 +37,11 @@
     <ClInclude Include="GridRenderer.h">
       <Filter>Components</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Resource Files</Filter>
-    </ClInclude>
     <ClInclude Include="ControllerManager.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="resources\resource.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -74,12 +74,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="GameLauncher.rc">
+    <ResourceCompile Include="resources\GameLauncher.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Launcher.ico">
+    <Image Include="resources\Launcher.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
