Add configurable spacing settings for icons and tabs
- Add separate horizontal and vertical icon spacing settings
- Add configurable tab height and icon vertical padding
- Create Settings class for centralized configuration management
- Update GridRenderer to use configurable spacing values
- Update WindowManager to use settings instead of hardcoded constants
- All settings are persisted in launcher.ini under [Display] section

--- a/launcher.ini
+++ b/launcher.ini
@@ -1,9 +1,9 @@
 [Window]
-X=468
-Y=269
-Width=1164
-Height=795
-ActiveTab=2
+X=1357
+Y=76
+Width=1844
+Height=941
+ActiveTab=1
 [Colors]
 TabActiveColor=0x139362
 TabInactiveColor=0x46464D
@@ -15,3 +15,11 @@ DOS=0xF6BF00
 [Scrolling]
 MouseScrollSpeed=60
 JoystickScrollSpeed=120
+[Display]
+IconScale=1.30
+IconLabelFontSize=46
+TabFontSize=46
+IconSpacingHorizontal=25
+IconSpacingVertical=12
+TabHeight=42
+IconVerticalPadding=2
