--- a/src/GameLauncher.vcxproj
+++ b/src/GameLauncher.vcxproj
@@ -111,8 +111,10 @@
     <ClInclude Include="GridRenderer.h" />
     <ClInclude Include="IconExtractor.h" />
     <ClInclude Include="resources\resource.h" />
+    <ClInclude Include="Settings.h" />
     <ClInclude Include="ShortcutParser.h" />
     <ClInclude Include="ShortcutScanner.h" />
+    <ClInclude Include="stb_image_resize2.h" />
     <ClInclude Include="TrayManager.h" />
     <ClInclude Include="WindowManager.h" />
   </ItemGroup>
@@ -122,8 +124,10 @@
     <ClCompile Include="GameLauncher_impl.cpp" />
     <ClCompile Include="GridRenderer.cpp" />
     <ClCompile Include="IconExtractor.cpp" />
+    <ClCompile Include="Settings.cpp" />
     <ClCompile Include="ShortcutParser.cpp" />
     <ClCompile Include="ShortcutScanner.cpp" />
+    <ClCompile Include="stb_image_resize2_impl.cpp" />
     <ClCompile Include="TrayManager.cpp" />
     <ClCompile Include="WindowManager.cpp" />
   </ItemGroup>
