--- a/src/GameLauncher.vcxproj.filters
+++ b/src/GameLauncher.vcxproj.filters
@@ -11,6 +11,9 @@
     <Filter Include="Components">
       <UniqueIdentifier>{12345678-1234-5678-9ABC-DEF123456789}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Extern">
+      <UniqueIdentifier>{f61ba8ac-8ca7-442c-8dd8-8c8443c15d24}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLauncher.h">
@@ -43,6 +46,12 @@
     <ClInclude Include="resources\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image_resize2.h">
+      <Filter>Extern</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameLauncher.cpp">
@@ -71,6 +80,12 @@
     </ClCompile>
     <ClCompile Include="ControllerManager.cpp">
       <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
+    <ClCompile Include="stb_image_resize2_impl.cpp">
+      <Filter>Extern</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
